Fix background position on mobile

--- a/src/sass/layout/_now.scss
+++ b/src/sass/layout/_now.scss
@@ -48,6 +48,6 @@ body .block.block-hero-bg-static {
   }
 
   @media (max-width: 500px) {
-    background-position: center 140rem;
+    background-position: center 160rem;
   }
 }
